@@ -32,3 +32,4 @@ Changes in version 1.3.x
 + getExperimentCrossAssociation: user's own function supported, sort in mode == table enabled
 + getExperimentCrossAssociation: added MARGIN & paired options, efficiency of algorithm improved
 + Added *Features aliases for *Taxa functions
++ *RDA functions utilize vegan:dbrda instead of vegan:rda
